fix: spacing map

--- a/front/app-web-vola2/src/app/modules/user/home/home.component.scss
+++ b/front/app-web-vola2/src/app/modules/user/home/home.component.scss
@@ -64,12 +64,14 @@ p {
     }
 }
 
-.map{
-    .map-container{
+.map {
+    .map-container {
+        margin: 80px 0 0 0;
         height: 500px;
         overflow: hidden;
         display: grid;
         align-content: center;
+
         img {
             object-fit: cover;
         }
